--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hola!
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Guillermo Ponce Andrés</title>
+  </head>
+  <body>
+    <section class="section">
+      <h1>Guillermo Ponce Andrés</h1>
+      <h2>Software developer <span>mayormente javascript</span></h2>
+    </section>
+  </body>
+</html>
