presentation section wip

--- a/index.html
+++ b/index.html
@@ -11,9 +11,20 @@
     <title>Guillermo Ponce Andrés</title>
   </head>
   <body>
-    <section class="section">
-      <h1>Guillermo Ponce Andrés</h1>
-      <h2>Software developer <span>mayormente javascript</span></h2>
+    <section class="presentation">
+      <h1 class="presentation__title">Guillermo Ponce Andrés</h1>
+      <h2 class="presentation__subtitle">Software developer <span class="presentation__subtitle--clarification">mayormente javascript</span></h2>
+      <div class="personal-links">
+        <a class="personal-links__item" href="https://www.linkedin.com/in/guillermo-ponce-andres/">
+          <img src="./img/linkedin.svg" alt="Linedin">
+        </a>
+        <a class="personal-links__item" href="https://github.com/guille367">
+          <img src="./img/github.svg" alt="Github">
+        </a>
+        <a class="personal-links__item" href="https://github.com/guille367">
+          <img src="./img/pdf.svg" alt="PDF">
+        </a>
+      </div>
     </section>
   </body>
 </html>
